# Hackathon

./: README.md
Python/FilesUpload/: Macro.py  csv_data_summary.py  csv_query.py  prompt.py  requirements.txt  simple-connect.py  theme_machine.py
Python/crew-ai-app/ai_latest_development/: report.md
Python/crew-ai-app/ai_latest_development/src/ai_latest_development/: main.py
Python/crew-ai-rag/: requirements.txt
Python/crew-ai-rag/rag_development/: README.md  pyproject.toml  report.md
Python/crew-ai-rag/rag_development/src/rag_development/: crew.py  main.py
Python/crew-ai-rag/rag_development/src/rag_development/config/: agents.yaml  tasks.yaml
Python/crew-ai-site-summary/: requirements.txt
Python/crew-ai-site-summary/ai_site_summary/: README.md  pyproject.toml
Python/crew-ai-site-summary/ai_site_summary/news/: 2024_news_article.md
Python/crew-ai-site-summary/ai_site_summary/src/ai_site_summary/: crew.py  main.py
Python/crew-ai-site-summary/ai_site_summary/src/ai_site_summary/config/: agents.yaml  tasks.yaml
Python/haystack/: app.py  pdf-context.py  readme.MD  requirements.txt
Python/haystack/.gradio/flagged/: dataset1.csv
