[project]
name = "rag_development"
version = "0.1.0"
description = "rag-development using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
rag_development = "rag_development.main:run"
run_crew = "rag_development.main:run"
train = "rag_development.main:train"
replay = "rag_development.main:replay"
test = "rag_development.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
