[project]
name = "ai_site_summary"
version = "0.1.0"
description = "ai-site-summary using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
ai_site_summary = "ai_site_summary.main:run"
run_crew = "ai_site_summary.main:run"
train = "ai_site_summary.main:train"
replay = "ai_site_summary.main:replay"
test = "ai_site_summary.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
